samples/_failures_safe/1761154514_c44a56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4812bcd9.c: In function ‘main’:
./samples/SAFE/__tmp_4812bcd9.c:141:13: error: expected declaration or statement at end of input
  141 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_4812bcd9.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4812bcd9.c:141:13: error: expected declaration or statement at end of input
